gcc/testsuite/g++.dg/parse/crash21.C
namespace N
{
  struct A; // { dg-error "previous declaration" "" }
}

template<int I>
struct N::A {}; // { dg-error "redeclared" "" }
